[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reply_24"
version = "0.0.1"
authors = [
  { name="UwU ENSE3", email="uwu.ense3@gmail.com" },
]
description = "Package for common function for Reply 24"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
